fix G+ align

--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -23,6 +23,8 @@ iframe[id^="twitter-widget"] {
 	width: 80px !important;
 }
 
+[id^="__plus"] iframe { vertical-align: middle; }
+
 @media (min-width: 550px) {
 	#ad-unit {
 		width: 550px;
